<resources>
    <string name="app_name">Weather</string>
    <string name="change_city">Change City</string>
    <string name="default_temp">+20</string>
    <string name="kirov">Kirov</string>
    <string name="mainly_cloudy">mainly_cloudy</string>
    <string name="feels_like">feels like</string>

    <string name="temperature_label">Temp</string>

    <string name="feels_like_label">feels like</string>

    <string name="city_coordinates">lt/ln: %s, %s"</string>

    <string name="error">Error</string>

    <string name="reload">Reload</string>

    <string name="direction_of_the_wind">Direction of the wind:</string>
    <string name="nw">northwest</string>
    <string name="n">northern</string>
    <string name="ne">northeastern</string>
    <string name="e">eastern</string>
    <string name="se">southeast</string>
    <string name="s">southern</string>
    <string name="sw">southwest</string>
    <string name="w">western</string>
    <string name="c">calm</string>

    <string name="Wind_speed">Wind speed:</string>
    <string name="ms">m/s</string>
    <string name="pressure">Pressure:</string>
    <string name="pres">mmHg</string>
    <string name="clear">Clear</string>
    <string name="cloudy">Cloudy</string>
    <string name="continuous_heavy_rain">Continuous heavy rain</string>
    <string name="drizzle">Drizzle</string>
    <string name="hail">Hail</string>
    <string name="heavy_rain">Heavy rain</string>
    <string name="light_rain">Light rain</string>
    <string name="light_snow">Light snow</string>
    <string name="moderate_rain">Moderate rain</string>
    <string name="overcast">Overcast</string>
    <string name="partly_cloudy">Partly cloudy</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="snowers">Snowers</string>
    <string name="snow_showers">Snow showers</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="thunderstorm_with_hail">Thunderstorm with hail</string>
    <string name="thunderstorm_with_rain">Thunderstorm with rain</string>
    <string name="summer">Summer</string>
    <string name="autumn">Autumn</string>
    <string name="winter">Winter</string>
    <string name="spring">Spring</string>

    <string name="content_provider">Content provider</string>
    <string name="menu_title_history">history</string>
    <string name="authorities">geekbrains.provider</string>


    <string name="dialog_button_close">Close</string>
    <string name="dialog_address_title">adress</string>
    <string name="dialog_address_get_weather">pogoda</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_meaasge">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключен</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно. Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="default_address">Red Square, 1, Moscow</string>
    <string name="button_search_map">Search</string>
    <string name="marker_start">Start</string>
    <string name="google_maps">google_maps</string>

    <string name="google_maps_key">AIzaSyDeBPo9Xqt78lfgeO_EguGlyEA3Ha46xUA</string>


</resources>