<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/base"
    tools:context=".MainActivity">

    <DigitalClock
        android:id="@+id/digitalClock"
        style="@style/Digital_clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_changeCity"
        style="@style/ChangeCity"
        android:text="@string/change_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/digitalClock" />

    <TextView
        android:id="@+id/tv_city"
        style="@style/City"
        android:text="@string/kirov"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_changeCity" />

    <TextView
        android:id="@+id/tv_condition_text_view"
        style="@style/Cloudy"
        android:text="@string/mainly_cloudy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_city" />

    <TextView
        android:id="@+id/tv_temp"
        style="@style/Temp"
        android:text="@string/default_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_condition_text_view" />

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="120dp"
        android:layout_height="107dp"
        app:layout_constraintStart_toEndOf="@+id/tv_temp"
        app:layout_constraintTop_toBottomOf="@+id/tv_condition_text_view" />

    <TextView
        android:id="@+id/tv_feels_like"
        style="@style/feels_like"
        android:text="@string/feels_like"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp" />

    <TextView
        android:id="@+id/tv_feel_temperature_field"
      style="@style/feel_temperature_field"
        android:text="+15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_feels_like" />




</androidx.constraintlayout.widget.ConstraintLayout>