<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/base"
    android:id="@+id/mainView">

    <DigitalClock
        android:id="@+id/digitalClock"
        style="@style/Digital_clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_changeCity"
        style="@style/ChangeCity"
        android:text="@string/change_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/digitalClock" />

    <TextView
        android:id="@+id/tv_cityName"
        style="@style/City"
        android:text="@string/kirov"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_changeCity" />

    <TextView
        android:id="@+id/tv_condition_text_view"
        style="@style/Cloudy"
        android:text="@string/mainly_cloudy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityCoordinates" />

    <TextView
        android:id="@+id/cityCoordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cityName"
        tools:text="lt/ln: 58.60353, 49.6668" />

    <TextView
        android:id="@+id/tv_temp"
        style="@style/Temp"
        android:text="@string/default_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_condition_text_view" />

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="120dp"
        android:layout_height="107dp"
        app:layout_constraintStart_toEndOf="@+id/tv_temp"
        app:layout_constraintTop_toBottomOf="@+id/tv_condition_text_view" />

    <TextView
        android:id="@+id/tv_feels_like"
        style="@style/feels_like"
        android:text="@string/feels_like"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp" />

    <TextView
        android:id="@+id/tv_feel_temperature_field"
      style="@style/feel_temperature_field"
        android:text="+15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_feels_like" />


</androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loadingBackground"
        android:visibility="gone"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</FrameLayout>
